--- a/VMCLI/Base.lproj/Main.storyboard
+++ b/VMCLI/Base.lproj/Main.storyboard
@@ -69,6 +69,9 @@
                                     <segment title="Canine"/>
                                     <segment title="Feline"/>
                                 </segments>
+                                <connections>
+                                    <action selector="segmentedControllerChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="v38-YX-fbd"/>
+                                </connections>
                             </segmentedControl>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="in kg" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6E5-1h-doA">
                                 <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
@@ -105,7 +108,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="in mg/m^2" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hev-ta-tzv">
+                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="in mg/m^2" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hev-ta-tzv">
                                 <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
